# multiplayer-ai

./: README.md  brad-prisoners-dilemma.ipynb  multiplayer.py  pyproject.toml  scott-prisoners-dilemma.ipynb
